@@ -1,5 +1,9 @@
 2012-08-16  Alexander V. Lukyanov <lav@yars.free.net>
 
+	* Torrent.cc: fixed ut_metadata total_size.
+
+2012-08-16  Alexander V. Lukyanov <lav@yars.free.net>
+
 	* network.cc: fixed typo.
 	* xstring.cc, xstring.h: (begins_with, instr, hexdump_to) new methods;
 	  improved dump() for invalid utf8 strings.
